--- a/app/views/grape_swagger_rails/application/index.html.erb
+++ b/app/views/grape_swagger_rails/application/index.html.erb
@@ -7,8 +7,8 @@
   <%= stylesheet_link_tag 'grape_swagger_rails/application.css' %>
   <%= javascript_include_tag 'grape_swagger_rails/application.js' %>
   <script type="text/javascript">
-	$(function () {
-	  var options = $("html").data('swagger-options');
+  $(function () {
+    var options = $("html").data('swagger-options');
 
     var headers = {};
     <% GrapeSwaggerRails.options.headers.each_with_index do |(key, value), index| %>
@@ -90,7 +90,7 @@
 </head>
 
 <body class="swagger-section">
-<div id='header'>
+<!-- <div id='header'>
   <div class="swagger-ui-wrap">
     <a id="logo" href="<%= GrapeSwaggerRails.options.app_url %>"><%= GrapeSwaggerRails.options.app_name %></a>
 
@@ -100,14 +100,13 @@
       <div class='input'><a id="explore" class="exploreBtn" href="#">Explore</a></div>
     </form>
   </div>
-</div>
+</div> -->
 
 <div id="message-bar" class="swagger-ui-wrap">
   &nbsp;
 </div>
 
 <div id="swagger-ui-container" class="swagger-ui-wrap">
-
 </div>
 
 </body>
